syntax = "proto3";
package m2g.pb;

enum CardCategory {
    NO_CARD_CATEGORY = 0;
    CARD_CATEGORY_DEFAULT_RANGED_WEAPON = 1;
    CARD_CATEGORY_SPECIAL_RANGED_WEAPON = 2;
    CARD_CATEGORY_DEFAULT_MELEE_WEAPON = 3;
    CARD_CATEGORY_SPECIAL_MELEE_WEAPON = 4;
}

enum CardType {
    NO_CARD = 0;
    CARD_CONSUMABLE_HP_POTION_20 = 1;
    CARD_CONSUMABLE_HP_POTION_80 = 2;

    CARD_REUSABLE_GUN = 1002;
    CARD_REUSABLE_MACHINE_GUN = 1003;
    CARD_REUSABLE_EXPLOSIVE = 1004;
    CARD_REUSABLE_SWORD = 1005;
    CARD_REUSABLE_ENEMY_SWORD = 1006;
    CARD_REUSABLE_LONG_SWORD = 1007;
    CARD_REUSABLE_AXE = 1008;
}
